This is the Change Log for PHPlot.
The project home page is http://sourceforge.net/projects/phplot/
-----------------------------------------------------------------------------

2011-07-28
    * Fixed problem found in testing with bubbles plot: data array
      with no Y,Z values at all got undefined property warnings.

    * Feature request #3352301 "Bubble plots":
      + Added new data type 'data-data-xyz', which includes a Z value
        for each Y.
      + Extended CheckDataArray(), DecodeDataType() and
        FindDataLimits() to understand new data type.
      + Added new plot type 'bubbles' for bubble plots, using data
        type 'data-data-xyz'. The Z value controls the bubble size.
      + New internal function DrawBubbles() to draw bubble plot.
      + New tunable parameters bubbles_min_size and bubbles_max_size.

2011-07-25
    * Feature request #3374495 "Data URL encoding":
      + New function EncodeImage() returns the plot image as a string,
        with 3 available encodings: raw, base64, and dataurl. The dataurl
        encoding implements RFC2397 embedding of image data in a URL,
        and allows a single PHP script to produce an HTML page with the
        plot image embedded within.
      + New internal function GetImageType() for code shared between
        PrintImage() and EncodeImage().
      + New function SetFailureImage() disables the normal behavior
        where PHPlot produces an image containing an error message in
        case of a fatal error. Suppressing this is necessary when using
        the new EncodeImage(), to avoid unexpected image data on stdout.
      + New member variable suppress_error_image, set by
        SetFailureImage(), checked by PrintError() to not make an image.

2011-07-22
    Preparing for move from CVS to Subversion.
    * Makefile: Remove 'tag' target. This was unused (and CVS-specific).
    * phplot.php: Remove reference to CVS in comment and version const.

2011-07-21